# cpsc304-project

./: .env  README.md  SQL_Script.sql  pyproject.toml  requirements.txt
backend/: db_conn.py  db_tunnel.sh  main.py  table_creation.py
database/: CreateTables.sql  DeleteRows.sql  DropTables.sql  InsertRows.sql
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: ApiService.ts  MockApiService.ts
frontend/src/constants/: Constants.ts  MockData.ts  Types.ts
frontend/src/controllers/: Delete.ts  Get.ts  MockData.ts  Post.ts  Put.ts
frontend/src/modules/: Constants.ts  DataTable.tsx  Delete.tsx  DeleteCertification.tsx  DeleteRow.tsx  DeleteShip.tsx  EditRow.tsx  HighEarningWorkModels.tsx  Insert.tsx  PersonnelMissions.tsx  PersonnelOnAllMissions.tsx  PopularShipClasses.tsx  Project.tsx  Projection.tsx  Selection.tsx  ShipCountByClass.tsx  Types.ts  Update.tsx  UpdateMission.tsx
